# Neu

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PLUGINS.md  PUBLISHING.md  README.md  build_android.sh
.github/workflows/: release.yml  rust.yml
app/: Cargo.toml
app/assets/: .keep
app/src/: cache.rs  main.rs
app/src/core/: cache.rs
app/src/plugins/: local.rs  youtube.rs
app/ui/: main.slint
neu-cpp/: CMakeLists.txt  README.md  org.neu.Neu.desktop  org.neu.Neu.metainfo.xml  org.neu.Neu.yml
neu-cpp/res/: resources.qrc
neu-cpp/snap/: snapcraft.yaml
neu-cpp/src/: main.cpp
neu-cpp/src/core/: AuthManager.h  DiscordRPC.h  LyricsProvider.h  MusicPlugin.cpp  MusicPlugin.h  PlaybackEngine.h  PlaylistManager.h  PluginRegistry.h  Recommender.h  Types.h  UpdateChecker.h  YouTubeCipher.h
neu-cpp/src/plugins/: LocalPlugin.cpp  LocalPlugin.h  YouTubePlugin.cpp  YouTubePlugin.h
neu-cpp/ui/: SidebarItem.qml  main.qml
playback/: Cargo.toml
playback/src/: lib.rs
plugin_sdk/: Cargo.toml
plugin_sdk/src/: lib.rs
recommender/: Cargo.toml
recommender/src/: lib.rs
scripts/: push_update.sh
yt_cipher/: Cargo.toml
yt_cipher/src/: lib.rs  parser.rs
