[workspace]
members = [
    "app",
    "playback",
    "plugin_sdk",
    "recommender",
    "yt_cipher",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
